<resources>
    <string name="app_name">NavigationInesMR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="segundo">Segundo</string>
    <string name="primero">Primero</string>
    <string name="tercero">Tercero</string>
    <string name="cuarto">Cuarto</string>
    <string name="quinto">Quinto</string>
    <string name="sexto">Sexto</string>
    <string name="septimo">Séptimo</string>
    <string name="octavo">Octavo</string>
    <string name="noveno">Noveno</string>
    <string name="decimo">Decimo</string>
    <string name="segundo_fragment">Segundo fragment</string>
    <string name="boton_para_ir_al_segundo_fragment">boton para ir al segundo fragment</string>
    <string name="tercer_fragment">Tercer fragment</string>
    <string name="boton_para_ir_al_tercer_fragment">boton para ir al tercer fragment</string>
    <string name="cuarto_fragment">Cuarto fragment</string>
    <string name="boton_para_ir_al_cuarto_fragment">boton para ir al cuarto fragment</string>
</resources>