<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/primerFragment">

    <fragment
        android:id="@+id/primerFragment"
        android:name="com.example.navigationinesmr.ui.pantallas.PrimerFragment"
        android:label="@string/primero"
        tools:layout="@layout/fragment_primer">
        <action
            android:id="@+id/action_primerFragment_to_segundoFragment"
            app:destination="@id/segundoFragment" />
        <action
            android:id="@+id/action_primerFragment_to_tercerFragment"
            app:destination="@id/tercerFragment" />
        <action
            android:id="@+id/action_primerFragment_to_cuartoFragment"
            app:destination="@id/cuartoFragment" />
        <argument
            android:name="mensaje"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="ShowAppBar"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/segundoFragment"
        android:name="com.example.navigationinesmr.ui.pantallas.SegundoFragment"
        android:label="@string/segundo"
        tools:layout="@layout/fragment_segundo">
        <action
            android:id="@+id/action_segundoFragment_to_tercerFragment"
            app:destination="@id/tercerFragment" />
        <action
            android:id="@+id/action_segundoFragment_to_cuartoFragment"
            app:destination="@id/cuartoFragment" />
    </fragment>
    <fragment
        android:id="@+id/tercerFragment"
        android:name="com.example.navigationinesmr.ui.pantallas.TercerFragment"
        android:label="@string/tercero"
        tools:layout="@layout/fragment_tercer">
        <action
            android:id="@+id/action_tercerFragment_to_cuartoFragment"
            app:destination="@id/cuartoFragment" />
        <action
            android:id="@+id/action_tercerFragment_to_segundoFragment"
            app:destination="@id/segundoFragment" />
        <action
            android:id="@+id/action_tercerFragment_to_septimoFragment"
            app:destination="@id/septimoFragment" />
    </fragment>
    <fragment
        android:id="@+id/cuartoFragment"
        android:name="com.example.navigationinesmr.ui.pantallas.CuartoFragment"
        android:label="@string/cuarto"
        tools:layout="@layout/fragment_cuarto">
        <action
            android:id="@+id/action_cuartoFragment_to_segundoFragment"
            app:destination="@id/segundoFragment" />
        <action
            android:id="@+id/action_cuartoFragment_to_tercerFragment"
            app:destination="@id/tercerFragment" />
        <action
            android:id="@+id/action_cuartoFragment_to_quintoFragment"
            app:destination="@id/quintoFragment" />
    </fragment>
    <fragment
        android:id="@+id/quintoFragment"
        android:name="com.example.navigationinesmr.ui.pantallas.QuintoFragment"
        android:label="@string/quinto"
        tools:layout="@layout/fragment_quinto">
        <action
            android:id="@+id/action_quintoFragment_to_cuartoFragment"
            app:destination="@id/cuartoFragment" />
        <action
            android:id="@+id/action_quintoFragment_to_sextoFragment"
            app:destination="@id/sextoFragment" />
    </fragment>
    <fragment
        android:id="@+id/sextoFragment"
        android:name="com.example.navigationinesmr.ui.pantallas.SextoFragment"
        android:label="@string/sexto"
        tools:layout="@layout/fragment_sexto">
        <action
            android:id="@+id/action_sextoFragment_to_cuartoFragment"
            app:destination="@id/cuartoFragment" />
        <action
            android:id="@+id/action_sextoFragment_to_quintoFragment"
            app:destination="@id/quintoFragment" />
    </fragment>
    <fragment
        android:id="@+id/septimoFragment"
        android:name="com.example.navigationinesmr.ui.pantallas.SeptimoFragment"
        android:label="@string/septimo"
        tools:layout="@layout/fragment_septimo">
        <action
            android:id="@+id/action_septimoFragment_to_tercerFragment"
            app:destination="@id/tercerFragment" />
        <action
            android:id="@+id/action_septimoFragment_to_octavoFragment"
            app:destination="@id/octavoFragment" />
    </fragment>
    <fragment
        android:id="@+id/octavoFragment"
        android:name="com.example.navigationinesmr.ui.pantallas.OctavoFragment"
        android:label="@string/octavo"
        tools:layout="@layout/fragment_octavo">
        <action
            android:id="@+id/action_octavoFragment_to_cuartoFragment"
            app:destination="@id/cuartoFragment" />
        <action
            android:id="@+id/action_octavoFragment_to_septimoFragment"
            app:destination="@id/septimoFragment" />
    </fragment>
</navigation>